--- a/src/main/resources/templates/myclass.html
+++ b/src/main/resources/templates/myclass.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>StudyMate - 내 강의실</title>
+  <title>StudyMate - 내 강의실2</title>
   <style>
     * {
       box-sizing: border-box;
