feat: search 페이지 백엔드 구현

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -155,7 +155,7 @@
           <option value="name">과목명</option>
           <option value="professor">교수명</option>
         </select>
-<!--          1. 검색 input에 id="searchInput" 추가-->
+<!--        검색 input에 id="searchInput" 추가-->
 <!--        <input type="text" placeholder="검색어를 입력하세요" class="search-input" />-->
           <input type="text" id="searchInput" placeholder="검색어를 입력하세요" class="search-input" />
         <button class="search-btn" onclick="searchKeyword()">검색</button>
