--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -198,6 +198,13 @@
           console.error('검색 실패:', err);
         });
     }
+
+    // 엔터키 인식
+    document.getElementById('searchInput').addEventListener('keyup', function(event) {
+        if (event.key === 'Enter') {
+            searchKeyword();
+        }
+    });
   </script>
 </body>
 </html>
