--- a/src/main/resources/templates/a_LogTest.html
+++ b/src/main/resources/templates/a_LogTest.html
@@ -170,7 +170,8 @@
 
         <div class="links">
             <!-- 링크에 thymeleaf 적용 -->
-            <a th:href="@{/signup}">Register</a> /
+            <!--<a th:href="@{/signup}">Register</a> /-->
+            <a href="a_SignupTest.html" class="nav-link">Register</a>/
             <a th:href="@{/find-id}">Find ID</a> /
             <a th:href="@{/find-password}">Find Password</a>
         </div>
